# film-flow-ui-v2

./: .gitignore  ApplicationScreen.qml  CMakeLists.txt  Main.qml  README.md  ResizeManager.qml  TitleBar.qml  TitleBarForm.ui.qml  film_flow_en_US.ts  film_flow_es_ES.ts  film_flow_pt_BR.ts  fonts.qrc  main.cpp  translations.qrc  ui.qrc
controls/: CMakeLists.txt  applicationcontrol.cpp  applicationcontrol.h  authcontrol.cpp  authcontrol.h  chainbasehandlercalls.cpp  chainbasehandlercalls.h  chainhandlercalls.h  chainmanager.cpp  chainmanager.h  control.cpp  control.h  controls_global.h  homecontrol.cpp  homecontrol.h  maincontrol.cpp  maincontrol.h  moviecontrol.cpp  moviecontrol.h  movieslidercontrol.cpp  movieslidercontrol.h  notificationscontrol.cpp  notificationscontrol.h  profilescreencontrol.cpp  profilescreencontrol.h  programreviewcontrol.cpp  programreviewcontrol.h  reviewprogrammodalcontrol.cpp  reviewprogrammodalcontrol.h  settingscontrol.cpp  settingscontrol.h  sidebarcontrol.cpp  sidebarcontrol.h
core/: CMakeLists.txt
core/controller/: applicationcontroller.cpp  applicationcontroller.h  authcontroller.cpp  authcontroller.h  moviecontroller.cpp  moviecontroller.h  multicontroller.cpp  multicontroller.h  notificationcontroller.cpp  notificationcontroller.h  reviewcontroller.cpp  reviewcontroller.h  reviewlikecontroller.cpp  reviewlikecontroller.h  sectioncontroller.cpp  sectioncontroller.h
core/entities/: configs.cpp  configs.h  genre.cpp  genre.h  integration.cpp  integration.h  movieinformation.cpp  movieinformation.h  notification.h  notificationreviewlike.cpp  notificationreviewlike.h  notificationsresult.cpp  notificationsresult.h  pagination.cpp  pagination.h  programconfig.cpp  programconfig.h  review.cpp  review.h  reviewsresult.cpp  reviewsresult.h  searchmovies.cpp  searchmovies.h  sectionsconfig.cpp  sectionsconfig.h  session.cpp  session.h  signin.cpp  signin.h  signup.cpp  signup.h  typenotificationenum.h  typeprogramenum.h  user.cpp  user.h
core/helper/: taskrunhelper.cpp  taskrunhelper.h
core/helper/regex/: regexhelper.h
core/manager/: applicationmanager.cpp  applicationmanager.h  languagemanager.cpp  languagemanager.h  notificationmanager.cpp  notificationmanager.h
core/network/: httpclient.cpp  httpclient.h  httpstatuscode.h
core/network/endpoint/: authendpoint.cpp  authendpoint.h  filmflowconfigendpoint.cpp  filmflowconfigendpoint.h  filmflowendpoint.cpp  filmflowendpoint.h  filmflowmultiendpoint.cpp  filmflowmultiendpoint.h  filmflownotificationendpoint.cpp  filmflownotificationendpoint.h  filmflowreviewendpoint.cpp  filmflowreviewendpoint.h  filmflowsectionendpoint.cpp  filmflowsectionendpoint.h
core/network/request/: multidetailsrequest.cpp  multidetailsrequest.h  multirequest.cpp  multirequest.h  paginationrequest.cpp  paginationrequest.h  sectionrequest.cpp  sectionrequest.h  signuprequest.cpp  signuprequest.h
core/network/response/: response.cpp  response.h
core/singleton/: integrationmanager.cpp  integrationmanager.h
core/validator/: emailvalidator.cpp  emailvalidator.h  ffvalidator.cpp  ffvalidator.h  passwordvalidator.cpp  passwordvalidator.h  rangevalidator.cpp  rangevalidator.h
core/websocket/: notificationws.cpp  notificationws.h
theme/: themecolor.h  themecolorfactory.cpp  themecolorfactory.h  themecolormanager.cpp  themecolormanager.h
ui/Components/: CMakeLists.txt  GenericModal.qml  GenericPopup.qml  GenericScreen.qml  NotificationCard.qml  NotificationCardForm.ui.qml  NotificationsPopup.qml  NotificationsPopupForm.ui.qml  PopupManager.qml  ProgramReview.qml  ProgramReviewForm.ui.qml  ReviewProgramModal.qml  ReviewProgramModalForm.ui.qml  ScreenManager.qml  SearchProgramResultPopup.qml  SearchProgramResultPopupForm.ui.qml  SearchResultCard.qml  SearchResultCardForm.ui.qml  ThemePicker.qml  ThemePickerForm.ui.qml  ToastManager.qml  qmldir
ui/Components/CardMovie/: CardMovie.qml  CardMovieForm.ui.qml
ui/Components/CardMovieList/: CardMovieList.qml  CardMovieListForm.ui.qml
ui/Components/Elements/: CMakeLists.txt  FFActionPill.qml  FFActionPillForm.ui.qml  FFBadget.qml  FFColorItem.qml  FFColorItemForm.ui.qml  FFComboBox.qml  FFComboBoxForm.ui.qml  FFIcon.qml  FFImageRounded.qml  FFLogo.qml  FFProfileIcon.qml  FFRatingStars.qml  FFRatingStarsForm.ui.qml  FFScoreBadget.qml  FFSectionHeader.qml  FFSkeletonLoading.qml  FFToast.qml  FFToastForm.ui.qml  FFToolTip.qml  qmldir
ui/Components/Elements/Button/: FFButton.qml  FFButtonForm.ui.qml  FFButtonIcon.qml  FFButtonIconForm.ui.qml  FFButtonNavigation.qml  FFButtonNavigationForm.ui.qml  FFButtonReaction.qml  FFButtonReactionForm.ui.qml  FFButtonScroll.qml  FFButtonScrollForm.ui.qml
ui/Components/Elements/InputField/: FFInputStateValidator.qml  FFPasswordTextField.qml  FFTextArea.qml  FFTextAreaForm.ui.qml  FFTextField.qml  FFTextFieldForm.ui.qml
ui/Components/Elements/LoadingCircle/: FFLoadingCircle.qml  FFLoadingCircleForm.ui.qml
ui/Components/Header/: Header.qml  HeaderForm.ui.qml
ui/Components/ImageGradient/: ImageGradient.qml
ui/Components/Login/: Login.qml  LoginForm.ui.qml
ui/Components/MovieSlider/: MovieSlider.qml  MovieSliderForm.ui.qml
ui/Components/Register/: Register.qml  RegisterForm.ui.qml
ui/Components/SideBar/: SideBar.qml  SideBarForm.ui.qml  SideBarItem.qml  SideBarItemForm.ui.qml  SideBarSectionMenu.qml  SideBarSectionMenuForm.ui.qml
ui/Models/: CMakeLists.txt  models_global.h  movieslistmodel.cpp  movieslistmodel.h  notificationslistmodel.cpp  notificationslistmodel.h  qmldir  reviewslistmodel.cpp  reviewslistmodel.h  searchprogramlistmodel.cpp  searchprogramlistmodel.h
ui/Models/helper/: cardsfetchhelper.cpp  cardsfetchhelper.h
ui/Screens/: CMakeLists.txt  qmldir
ui/Theme/: CMakeLists.txt  Colors.qml  Durations.qml  Fonts.qml  Icons.qml  Radius.qml  Spacings.qml  qmldir  resources.qrc  theme_global.h
ui/Theme/factory/: themecolorfactory.cpp  themecolorfactory.h
ui/Theme/manager/: themecolormanager.cpp  themecolormanager.h
ui/Theme/models/: coloritemmodel.cpp  coloritemmodel.h  colorrole.h  themecolormodel.h
(+21 files in other folders)
